testsuite/tests/parser/should_fail/NoNumericUnderscores1.stderr

NoNumericUnderscores1.hs:11:3: error:
    Use NumericUnderscores to allow underscores in floating literals
